# chatterbox-test

./: .gitignore  README.md  app.py  main.py  monkeypatches.py  pyproject.toml  read-watermark.py
static/: app.js  style.css
templates/: index.html
